tests/snapshots/validate__valid__extensions.snap
---
source: tests/validate.rs
expression: out.diagnostics()
---
✔ extensions.json is a valid release artifact
  version: 1.0.0
  tag: v1.0.0
