tests/snapshots/validate__valid__full.snap
---
source: tests/validate.rs
expression: out.diagnostics()
---
✔ full.json is a valid release artifact
  version: 1.4.0
  tag: v1.4.0
