tests/snapshots/validate__valid__minimal-changed.snap
---
source: tests/validate.rs
expression: out.diagnostics()
---
✔ minimal-changed.json is a valid release artifact
  version: 1.0.0
  tag: v1.0.0
