tests/snapshots/validate__valid__minimal-unchanged.snap
---
source: tests/validate.rs
expression: out.diagnostics()
---
✔ minimal-unchanged.json is a valid release artifact
- changed: false — gh-ship would report nothing to release
