tests/snapshots/validate__valid__prerelease.snap
---
source: tests/validate.rs
expression: out.diagnostics()
---
✔ prerelease.json is a valid release artifact
  version: 2.0.0-rc.1
  tag: v2.0.0-rc.1
  prerelease: yes
